--- a/New folder/project/contact.html
+++ b/New folder/project/contact.html
@@ -39,32 +39,39 @@
   <body>
     <div class="wrapper">
       <header>
-        <div class="container">
+        <div class="container-fluid">
           <div class="header-inner d-flex">
-            <!-- <div class="bars-icon"><i class="fa-solid fa-bars"></i></div> -->
+            <img
+              class="menu-icon"
+              src="./images/menu-icon.png"
+              alt="menu-icon"
+            />
             <a href="" class="logo">
               <img src="./images/logo.png" alt="logo" />
             </a>
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="#">Trang chủ</a>
-              </li>
-              <li class="nav-item">
-                <a class="d-flex" href="./page/menu.html">Menu </a>
-              </li>
-              <li class="nav-item">
-                <a href="./page/tintuc.html">Tin tức</a>
-              </li>
-              <li class="nav-item">
-                <a href="./page/contact.html">Bài Viết</a>
-              </li>
-              <li class="nav-item">
-                <a href="./page/about.html">Liên Hệ</a>
-              </li>
-            </ul>
+            <div class="menu d-flex">
+              <ul class="nav-list">
+                <li class="nav-item">
+                  <a href="./index.html">Trang chủ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="d-flex" href="./menu.html">Menu </a>
+                </li>
+                <li class="nav-item">
+                  <a href="./news.html">Tin tức</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#">Bài Viết</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#">Liên Hệ</a>
+                </li>
+              </ul>
+            </div>
             <div class="login">
               <div class="cart">
                 <img src="./images/CartPlus.png" alt="cart" />
+                <div class="cart-quantity">0</div>
               </div>
               <div class="user-icon">
                 <img src="./images/user.png" alt="user" />
