--- a/New folder/project/news.html
+++ b/New folder/project/news.html
@@ -49,19 +49,19 @@
             </a>
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="#">Trang chủ</a>
+                <a href="./index.html">Trang chủ</a>
               </li>
               <li class="nav-item">
-                <a class="d-flex" href="./page/menu.html">Menu </a>
+                <a class="d-flex" href="./menu.html">Menu </a>
               </li>
               <li class="nav-item">
-                <a href="./page/tintuc.html">Tin tức</a>
+                <a href="#">Tin tức</a>
               </li>
               <li class="nav-item">
-                <a href="./page/contact.html">Bài Viết</a>
+                <a href="./contact.html">Bài Viết</a>
               </li>
               <li class="nav-item">
-                <a href="./page/about.html">Liên Hệ</a>
+                <a href="./contact.html">Liên Hệ</a>
               </li>
             </ul>
             <div class="login">
