--- a/project2/contact.html
+++ b/project2/contact.html
@@ -34,6 +34,7 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="stylesheet" href="./css/header.css" />
     <title>Vite App</title>
   </head>
   <body>
@@ -41,40 +42,46 @@
       <header>
         <div class="container-fluid">
           <div class="header-inner d-flex">
-            <img
-              class="menu-icon"
-              src="./images/menu-icon.png"
-              alt="menu-icon"
-            />
-            <a href="" class="logo">
-              <img src="./images/logo.png" alt="logo" />
-            </a>
-            <div class="menu d-flex">
-              <ul class="nav-list">
-                <li class="nav-item">
-                  <a href="./index.html">Trang chủ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="d-flex" href="./menu.html">Menu </a>
-                </li>
-                <li class="nav-item">
-                  <a href="./news.html">Tin tức</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#">Bài Viết</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#">Liên Hệ</a>
-                </li>
-              </ul>
-            </div>
-            <div class="login">
-              <div class="cart">
-                <img src="./images/CartPlus.png" alt="cart" />
-                <div class="cart-quantity">0</div>
+            <div class="container d-flex header-fix">
+              <img
+                class="menu-icon"
+                src="./images/menu-icon.png"
+                alt="menu-icon"
+              />
+              <div class="logo">
+                <a href="">
+                  <img src="./images/logo.png" alt="logo" />
+                </a>
               </div>
-              <div class="user-icon">
-                <img src="./images/user.png" alt="user" />
+              <div class="menu d-flex">
+                <ul class="nav-list nav-list-768 nav-list-1200">
+                  <div class="container container-li d-flex">
+                    <li class="nav-item li-trang-chu">
+                      <a href="./index.html">Trang chủ</a>
+                    </li>
+                    <li class="nav-item li-menu">
+                      <a class="d-flex" href="./menu.html">Menu </a>
+                    </li>
+                    <li class="nav-item li-news">
+                      <a href="./news.html">Tin tức</a>
+                    </li>
+                    <li class="nav-item li-baiviet">
+                      <a href="./baiviet.html">Bài Viết</a>
+                    </li>
+                    <li class="nav-item li-contact">
+                      <a href="#">Liên Hệ</a>
+                    </li>
+                  </div>
+                </ul>
+              </div>
+              <div class="login">
+                <div class="cart">
+                  <img src="./images/CartPlus.png" alt="cart" />
+                  <div class="cart-quantity">0</div>
+                </div>
+                <div class="user-icon">
+                  <img src="./images/user.png" alt="user" />
+                </div>
               </div>
             </div>
           </div>
@@ -152,7 +159,17 @@
               </div>
             </div>
             <div class="contact-map">
-              <img src="./images/contact-map.png" alt="map" />
+              <div id="map">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.290210625121!2d105.84752851540219!3d21.02107089341554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab92f7b7059d%3A0x5f30ef302b8450be!2zNjIgQsOgIFRyaeG7h3UsIFRy4bqnbiBIxrBuZyDEkOG6oW8sIEhvw6BuIEtp4bq_bSwgSMOgIE7hu5lpLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1653107534206!5m2!1svi!2s"
+                  width="820px"
+                  height="825px"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
             </div>
           </div>
         </div>
@@ -231,7 +248,7 @@
                   >Email : pizzashop@gmail.com</a
                 >
               </p>
-              <div class="footer-link ">
+              <div class="footer-link">
                 <a href="#" class="footer-icon"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
@@ -267,11 +284,13 @@
           </div>
           <div class="row">
             <p class="copy-right text-center">
-              © 2022 Pizza Shop. All rights reserved
+              © Pizza Shop. All rights reserved
             </p>
           </div>
         </div>
       </section>
     </div>
+    <script type="module" src="/js/main.js"></script>
+    <script src="./js/main2.js"></script>
   </body>
 </html>
