--- a/project-3/contact.html
+++ b/project-3/contact.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="shortcut icon" href="./images/logo2.ico" type="image/x-icon">
+<link rel="icon" href="./images/logo2.ico" type="image/x-icon">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CDN -->
     <link
@@ -35,7 +38,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/contact.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <title>Vite App</title>
+    <title>Pizza Shop</title>
   </head>
   <body>
     <div class="wrapper">
