--- a/project-3/baiviet.html
+++ b/project-3/baiviet.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="shortcut icon" href="./images/logo2.ico" type="image/x-icon">
+<link rel="icon" href="./images/logo2.ico" type="image/x-icon">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CDN -->
     <link
@@ -35,7 +37,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/baiviet.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <title>Vite App</title>
+    <title>Pizza Shop</title>
   </head>
   <body>
     <div class="wrapper">
