--- a/project-3/thanhtoan.html
+++ b/project-3/thanhtoan.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./images/logo2.ico" type="image/x-icon">
+<link rel="icon" href="./images/logo2.ico" type="image/x-icon">
+
     <!-- CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -35,7 +38,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/thanhtoan.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <title>Document</title>
+    <title>Pizza Shop</title>
   </head>
   <body>
     <div class="wrapper">
