--- a/project0406/project0406/menu.html
+++ b/project0406/project0406/menu.html
@@ -556,6 +556,22 @@
        
       </div>
       <div class="overlay-popup-delete"></div>
+      <div class="popup-delete">
+        <div class="text-popup-delete">
+          <p>XOÁ SẢN PHẨM</p>
+        </div>
+        <div class="tex2-popup-delete">
+          <p>Bạn muốn xoá sản phẩm ?</p>
+        </div>
+        <div class="tex3-popup-delete d-flex">
+          <img src="./images/PZ1.png" alt="pz1" />
+          <p>Pizza Gà Phô Mai Thịt Heo Xông Khói - Cheesy Chicken</p>
+        </div>
+        <div class="btn-popup-delete">
+          <button class="co">Xoá</button>
+          <button class="khong">Huỷ</button>
+        </div>
+      </div>
       <div class="hotline-phone-ring-wrap">
         <div class="hotline-phone-ring">
           <div class="hotline-phone-ring-circle"></div>
